jobber videre med å pakke inn