@@ -14,10 +14,25 @@
 
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
     <maven.compiler.source>17</maven.compiler.source>
 	<maven.compiler.target>17</maven.compiler.target>
     <javafx.version>17.0.1</javafx.version>
+    <javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
+    
+   
+    <main-class>no.ehealthresearch.dignitycare.fastlege.App</main-class>
+    
+    <dependency.loc>dependency</dependency.loc>
+   
+    <launcherName>tess_analyzer</launcherName>
+    <appName>tess_analyzer</appName>
+    
+    <windows.upgrade.uuid>bc25f2e3-4b1c-4d76-968e-48a57c001274</windows.upgrade.uuid>
+    
+    <jvm.modules>java.base,java.sql,java.xml,java.logging,java.management,java.desktop,java.naming,jdk.unsupported</jvm.modules>
+    
+    <slf4j.version>1.7.32</slf4j.version>
   </properties>
 
   <dependencies>
@@ -91,7 +106,9 @@
   </dependencies>
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+  
+  	
+    
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
@@ -104,25 +121,86 @@
           <version>3.0.2</version>
         </plugin>
         <plugin>
-          	<artifactId>maven-compiler-plugin</artifactId>
-          	<version>3.8.0</version>
-          	<configuration>
-             	<source>${maven.compiler.source}</source>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+              	<source>${maven.compiler.source}</source>
    				<target>${maven.compiler.target}</target>
-			</configuration>
+        		<compilerArgs>
+          			<option>--add-exports</option>
+		       		<option>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</option>
+	       			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.font=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.scene.shape=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+        		</compilerArgs>
+      		</configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
         </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
+        	<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+              	<version>2.5.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <!-- This copies all of the jar files declared by the Maven build into a single directory.
+                        This makes it easy to assemble the final installer package -->
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+          
+            <plugin>
+                <!-- Put the application jar generated by the project into the dependency folder - the default folder
+                for the maven-dependency-plugin output. -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                   
+                    <archive>
+			          <manifest>
+			            <addClasspath>true</addClasspath>
+			            <classpathPrefix>${dependency.loc}/</classpathPrefix>
+			            <mainClass>${main-class}</mainClass>
+			          </manifest>
+			        </archive>
+                    
+                </configuration>
+            </plugin>
+        
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
@@ -136,7 +214,46 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+            <!-- Plugin to make working with JavaFX nicer. See https://github.com/openjfx/javafx-maven-plugin -->
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.5</version>
+            <configuration>
+                <mainClass>${main-class}</mainClass>
+                <options>
+           
+		           	<option>--add-exports</option>
+		       		<option>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</option>
+	       			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.font=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.scene.shape=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
+	      			
+	      			<option>--add-exports</option>
+	      			<option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+           
+      			</options>
+            </configuration>
+        </plugin>
       </plugins>
-    </pluginManagement>
+    
   </build>
 </project>
